2009-08-08 version 0.2.4:
	* Default blacklist extendend
	* True non-power user install supported (no HKLM key in registry)
	* Added launch on windows start option in installer
	* Added command line parameter "/m" to run minimized
	* Drag&drop of windows links in main window (whitelist) supported

2009-08-05 version 0.2.3:
	* Status not updated anymore if screensaver is enabled (avoid 3d screensavers)
	* Default blacklist extended
	* Added dinput.dll to modules list (catch more games)

2009-08-05 version 0.2.2:
	* Added drag&drop a file into main window to add to whitelist
	* Added a "Blacklist it" button to add application currently detected to blacklist
	* Stretched background to display properly with all window decorations
	* Updated readme

2009-08-03 version 0.2.1:
	* Fixed black/white list not editable when program is first run
	* Fixed README not being uninstalled
	* Added detection and optional download of VC++2008 runtime to installer

2009-08-01 version 0.2.0:
	* Fixed settings file regression of 0.1.3
	* Main window decluttering and background image
	* Settings dialog (with immediate language change)
	* Launch text editor from settings dialog to edit black/white lists

2009-08-01 version 0.1.3:
	* Implemented plain text process white list and black list
	* Installer tweaks

2009-07-31 version 0.1.2:
	* Improved games detection.
	* Fixed vulnerability in settings handling.
	* Fixed missing translated text.

2009-07-30 version 0.1.1:
	* Fixed uninstaller language.

2009-07-30 version 0.1.0:
	First release of IMinGames, based off Pier Castonguay's "NowPlayingGames" v1.13.
	* Code refactoring.
	* Support hooking processes at launch and exit instead of pooling process list.
	* Settings in plain text file.
    * Multiple language support, currently English and French.
	* NSIS graphical installer.
	* New tray icon.
	* Released with a BSD-style license.